Added in game notifications

--- a/wf-connect/src/app/page.module.css
+++ b/wf-connect/src/app/page.module.css
@@ -1,6 +1,6 @@
 .page {
   --background: #3c3c42;
-  --foreground: #d61616;
+  --foreground: #ffffff;
 
   --text-primary: #000;
   --text-secondary: #666;
