--- a/wf-connect/src/app/components/grids/groupGrid.module.css
+++ b/wf-connect/src/app/components/grids/groupGrid.module.css
@@ -5,12 +5,13 @@
 
 .group{
     display: flex;
-    aspect-ratio: 4;
+    width: 100%;
+    height: 130px;
     border-radius: 16px;
     padding-left: 10px;
 }
 
-.groupGrid :not(:last-child){
+.group:not(:nth-child(4)){
     margin-bottom: 10px;
 }
 
