--- a/wf-connect/src/app/components/GameContainer.module.css
+++ b/wf-connect/src/app/components/GameContainer.module.css
@@ -37,3 +37,10 @@
     margin: auto;
     text-align: left;
 }
+
+.title{
+    text-align: center;
+    font-family: var(--font-ailerons);
+    font-size: 52;
+    color: aliceblue;
+}
