--- a/wf-connect/src/app/globals.css
+++ b/wf-connect/src/app/globals.css
@@ -19,7 +19,7 @@ body {
 body {
   color: black;
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-futura-medium), Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -41,6 +41,10 @@ button{
 
 .flex{
   display: flex;
+}
+
+.alieron{
+  font-family: var(--font-ailerons);
 }
 
 @media (prefers-color-scheme: dark) {
