--- a/wf-connect/src/app/components/EndScreen.module.css
+++ b/wf-connect/src/app/components/EndScreen.module.css
@@ -1,4 +1,7 @@
 .endModal{
+    width: 80%;
+    aspect-ratio: 1;
+    margin: 0px 20px;
     position: absolute;
     z-index: 1;
     background-color: white;
@@ -12,7 +15,7 @@
 }
 
 .endModal h2{
-    font-size: 30px;
+    font-size: 42px;
     color: var(--text-primary);
 }
 
@@ -20,11 +23,12 @@
     font-size: 24px;
 }
 
-.copyButton{
+.modalButton{
     cursor: pointer;
     border: 1px solid black;
     border-radius: 8px;
     width: fit-content;
     padding: 5px;
-    margin: auto;
+    margin: 20px auto;
+    font-size: 22px;
 }
