--- a/wf-connect/src/app/components/EndScreen.module.css
+++ b/wf-connect/src/app/components/EndScreen.module.css
@@ -1,17 +1,26 @@
+.modalBackground{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    border-radius: 16px;
+    backdrop-filter: blur(2px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .endModal{
     width: 80%;
     aspect-ratio: 1;
-    margin: 0px 20px;
-    position: absolute;
-    z-index: 1;
     background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-self: center;
     padding: 20px;
     border-radius: 16px;
     text-align: center;
+    box-shadow: 2px 2px 10px 2px rgb(116, 116, 116);
 }
 
 .endModal h2{
