--- a/wf-connect/src/app/components/Notification.module.css
+++ b/wf-connect/src/app/components/Notification.module.css
@@ -3,6 +3,7 @@ div.notification{
     position: absolute;
     left: 50%;
     top: 50%;
+    transform: translate(-50%, -50%);
     z-index: 100;
     background-color: var(--foreground);
     color: var(--text-primary);
@@ -10,6 +11,7 @@ div.notification{
     border-radius: 8px;
     font-size: large;
     font-weight: 400;
+    border: 1px solid black;
 }
 
 div.visible{
