--- a/wf-connect/src/app/components/grids/groupGrid.module.css
+++ b/wf-connect/src/app/components/grids/groupGrid.module.css
@@ -7,8 +7,8 @@
     display: flex;
     width: 100%;
     height: 130px;
-    border-radius: 16px;
     padding-left: 10px;
+    box-shadow: 0px 0px 2px 1px var(--accents);
 }
 
 .group:not(:nth-child(4)){
@@ -34,9 +34,9 @@
 }
 
 .groupInfo h2{
-    color: var(--text-primary);
+    color: black;
 }
 
 .groupInfo div{
-    color: var(--text-secondary);
+    color: rgb(80, 80, 80);
 }
