--- a/wf-connect/src/app/globals.css
+++ b/wf-connect/src/app/globals.css
@@ -10,6 +10,22 @@
   }
 }
 
+.classic{
+  --background: #5D7B87;
+  --foreground: #425B69;
+  --text-primary: #FFFFFF;
+  --text-secondary: #E8D55D;
+  --accents: #FFFFFF;
+}
+
+.vitruvian{
+  --background: #313042;
+  --foreground: #23212fbd;
+  --text-primary: #BEA966;
+  --text-secondary: #F5E3AD;
+  --accents: #BEA966;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -37,6 +53,24 @@ a {
 
 button{
   all:unset
+  
+}
+
+.button{
+    background-color: var(--foreground);
+    cursor: pointer;
+    width: fit-content;
+    padding: 5px;
+    margin: 20px auto;
+    font-size: 22px;
+    box-shadow: 0px 1px 1px 0px var(--text-primary);
+    border-bottom: 2px solid transparent;
+    color: var(--text-primary);
+}
+.button:hover{
+    box-shadow: 0px 0px 1px 0px var(--text-secondary);
+    color: var(--text-secondary);
+    border-bottom: 2px solid var(--text-secondary);
 }
 
 .flex{
