--- a/wf-connect/src/app/page.module.css
+++ b/wf-connect/src/app/page.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   font-family: var(--font-geist-sans);
-  background-color: var(--background);
+  /* background-color: var(--background); */
+  /* background: linear-gradient(135deg, var(--background), var(--accents)); */
 }
 
