--- a/wf-connect/src/app/components/EndScreen.module.css
+++ b/wf-connect/src/app/components/EndScreen.module.css
@@ -19,7 +19,7 @@
     justify-content: center;
     padding: 20px;
     text-align: center;
-    box-shadow: 0px 0px 2px 1px var(--text-secondary);
+    box-shadow: 0px 0px 1px var(--accents);
     color: var(--text-primary);
 }
 
