--- a/wf-connect/src/app/components/GameContainer.module.css
+++ b/wf-connect/src/app/components/GameContainer.module.css
@@ -1,7 +1,8 @@
 .gridContainer{
     display: flex;
     position: relative;
-    width: 550px;
+    max-width: 550px;
+    width: 100vw;
     justify-content: center;
 }
 
@@ -10,6 +11,12 @@
     margin-top: 20px;
     padding: 0px 20px
 
+}
+
+@media (max-width: 448px) {
+    .gridBelow{
+        flex-direction: column;
+    }
 }
 
 .controlButton{
