--- a/wf-connect/src/app/components/grids/groupGrid.module.css
+++ b/wf-connect/src/app/components/grids/groupGrid.module.css
@@ -6,7 +6,7 @@
 .group{
     display: flex;
     width: 100%;
-    height: 130px;
+    aspect-ratio: 4 ;
     padding-left: 10px;
     box-shadow: 0px 0px 2px 1px var(--accents);
 }
@@ -16,6 +16,9 @@
 }
 
 .groupImages{
+    height: 100%;
+    aspect-ratio: 1;
+    padding: 5px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2,1fr);
@@ -35,8 +38,13 @@
 
 .groupInfo h2{
     color: black;
+    font-size: min(calc(15px + 1vw), 24px);
 }
 
 .groupInfo div{
     color: rgb(80, 80, 80);
+}
+
+.groupImageWrapper{
+    position: relative;
 }
