--- a/wf-connect/src/app/components/grids/selectGrid.module.css
+++ b/wf-connect/src/app/components/grids/selectGrid.module.css
@@ -3,17 +3,20 @@
     grid-template-columns: repeat(4, 1fr);
     row-gap: 6px;
     column-gap: 10px;
+    width: 100%;
 }
 
 .gridItem{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     margin: 0;
     background-color: var(--foreground);
     box-shadow: 0px 0px 1px var(--accents);
     aspect-ratio: 1;
     border-bottom: 4px solid transparent;
+    padding: 5px;
 }
 
 .gridItem:hover{
