--- a/wf-connect/src/app/components/GameContainer.module.css
+++ b/wf-connect/src/app/components/GameContainer.module.css
@@ -3,6 +3,7 @@
     position: relative;
     max-width: 550px;
     width: 100vw;
+    aspect-ratio: 1;
     justify-content: center;
 }
 
@@ -16,6 +17,10 @@
 @media (max-width: 448px) {
     .gridBelow{
         flex-direction: column;
+    }
+
+    .gridBelow > *{
+        margin: auto;
     }
 }
 
