--- a/wf-connect/src/app/components/GameGrid.module.css
+++ b/wf-connect/src/app/components/GameGrid.module.css
@@ -1,4 +1,10 @@
 .gameGrid{
     width: 100%;
     position: relative;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    row-gap: 10px;
+    column-gap: 10px;
+    width: 100%;
 }
