--- a/wf-connect/src/app/components/grids/groupGrid.module.css
+++ b/wf-connect/src/app/components/grids/groupGrid.module.css
@@ -1,18 +1,16 @@
 .groupGrid{
     flex-direction: column;
     width: 100%;
+    
 }
 
 .group{
     display: flex;
     width: 100%;
-    aspect-ratio: 4 ;
+    height: 100%;
     padding-left: 10px;
     box-shadow: 0px 0px 2px 1px var(--accents);
-}
-
-.group:not(:nth-child(4)){
-    margin-bottom: 10px;
+    grid-column: 1 / span 4;
 }
 
 .groupImages{
