--- a/wf-connect/src/app/components/grids/selectGrid.module.css
+++ b/wf-connect/src/app/components/grids/selectGrid.module.css
@@ -1,4 +1,4 @@
-.selectGrid > *{
+.selectGrid{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     row-gap: 6px;
@@ -14,7 +14,6 @@
     margin: 0;
     background-color: var(--foreground);
     box-shadow: 0px 0px 1px var(--accents);
-    aspect-ratio: 1;
     border-bottom: 4px solid transparent;
     padding: 5px;
 }
