--- a/wf-connect/src/app/components/Dropdownselector.module.css
+++ b/wf-connect/src/app/components/Dropdownselector.module.css
@@ -1,8 +1,7 @@
 .container {
-  position: fixed;
-  top: 10px;
-  left: 10px;
+  position: relative;
   z-index: 50;
+  width: fit-content;
 }
 
 .button {
@@ -25,28 +24,6 @@
   min-width: 150px;
   width: 100%;
   z-index: 51;
-}
-
-.option {
-  padding: 10px 12px;
-  cursor: pointer;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--text-primary);
-  transition: background-color 0.2s ease;
-}
-
-.option:hover {
-  background-color: var(--foreground);
-}
-
-.option:first-child {
-  border-radius: 4px 4px 0 0;
-}
-
-.option:last-child {
-  border-radius: 0 0 4px 4px;
 }
 
 .label {
