--- a/wf-connect/src/app/components/GameContainer.module.css
+++ b/wf-connect/src/app/components/GameContainer.module.css
@@ -1,3 +1,11 @@
+.gameContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: fit-content;
+    margin: auto;
+}
+
 .gridContainer{
     display: flex;
     position: relative;
@@ -9,6 +17,7 @@
 
 .gridBelow{
     display: flex;
+    width: 100%;
     margin-top: 20px;
     padding: 0px 20px
 
@@ -40,7 +49,7 @@
 
 .lives{
     font-size: 52px;
-    margin: auto;
+    margin-left: auto;
     text-align: right;
     display: flex;
     flex-direction: column;
