--- a/wf-connect/src/app/components/Dropdownselector.module.css
+++ b/wf-connect/src/app/components/Dropdownselector.module.css
@@ -4,6 +4,10 @@
   width: fit-content;
 }
 
+.container:not(:last-child){
+  margin-right: 20px;
+}
+
 .button {
   cursor: pointer;
   font-weight: 500;
@@ -22,7 +26,7 @@
   background-color: var(--background);
   box-shadow: 0px 0px 1px 0px var(--text-secondary);
   min-width: 150px;
-  width: 100%;
+  width: max(100%,fit-content);
   z-index: 51;
 }
 
