--- a/wf-connect/src/app/components/Header.module.css
+++ b/wf-connect/src/app/components/Header.module.css
@@ -1,4 +1,5 @@
 .header{
+    display: flex;
     padding: 10px;
 }
 
@@ -10,16 +11,25 @@
   align-items: center;
   color: var(--text-primary);
   transition: var(--background) 0.2s ease;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.option span{
+  white-space: nowrap;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 90px;
+  column-gap: 20px;
 }
 
 .option:hover {
   background-color: var(--foreground);
+  color: var(--text-secondary);
 }
 
-.option:first-child {
-  border-radius: 4px 4px 0 0;
-}
-
-.option:last-child {
-  border-radius: 0 0 4px 4px;
+.option > :not(:last-child){
+  /* margin-right: 20px; */
 }
