--- a/wf-connect/src/app/components/grids/selectGrid.module.css
+++ b/wf-connect/src/app/components/grids/selectGrid.module.css
@@ -13,9 +13,9 @@
     position: relative;
     margin: 0;
     background-color: var(--foreground);
+    color: var(--text-primary);
     box-shadow: 0px 0px 1px var(--accents);
     border-bottom: 4px solid transparent;
-    padding: 5px;
 }
 
 .gridItem:hover{
@@ -25,6 +25,16 @@
 .gridItem.selected{
     border-bottom: 4px solid var(--text-secondary);
     box-shadow: 0px 0px 2px 0px var(--text-secondary);
+    color: var(--text-secondary);
+}
+
+.gridItem > p{
+    z-index: 1;
+    width: 100%;
+    margin-top: auto;
+    padding: 5px;
+    text-align: center;
+    background: -webkit-linear-gradient(transparent, var(--foreground));
 }
 
 @keyframes shake {
