Added game history tracking Added win streak indicator to the end screen Fixed random puzzle mode

--- a/wf-connect/src/app/styles/EndScreen.module.css
+++ b/wf-connect/src/app/styles/EndScreen.module.css
@@ -28,11 +28,11 @@
     color: var(--text-secondary);
 }
 
-.endMessage{
+.endModal p{
     font-size: 18px;
 }
 
-.lives{
+.endModal b{
     color: var(--text-secondary);
 }
 
