--- a/wf-connect/src/app/styles/Dropdownselector.module.css
+++ b/wf-connect/src/app/styles/Dropdownselector.module.css
@@ -26,6 +26,7 @@
   background-color: var(--background);
   box-shadow: 0px 0px 1px 0px var(--text-secondary);
   min-width: 100%;
+  max-width: 95vw;
   z-index: 51;
 }
 
