--- a/wf-connect/src/app/globals.css
+++ b/wf-connect/src/app/globals.css
@@ -10,6 +10,10 @@
   }
 }
 
+.material-symbols-outlined {
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+}
+
 .classic{
   --background: #5D7B87e8;
   --foreground: #425b6986;
