--- a/wf-connect/src/app/styles/Dropdownselector.module.css
+++ b/wf-connect/src/app/styles/Dropdownselector.module.css
@@ -19,6 +19,18 @@
     border-bottom: 2px solid var(--text-secondary);
 }
 
+@media (max-width: 430px){
+  .button{
+    width: 30px;
+    aspect-ratio: 1;
+    text-align: center;
+  }
+
+  .container:not(:last-child){
+    margin-right: 10px;
+  }
+}
+
 .menu {
   position: absolute;
   top: calc(100% + 4px);
@@ -26,12 +38,18 @@
   background-color: var(--background);
   box-shadow: 0px 0px 1px 0px var(--text-secondary);
   min-width: 100%;
-  max-width: 95vw;
+  max-width: 98vw;
+  width: max-content;
   z-index: 51;
 }
 
 .label {
   font-size: 14px;
+}
+
+.icon {
+  filter: brightness(0) saturate(100%) invert(1) hue-rotate(0deg);
+  filter: invert(var(--text-primary, 0%));
 }
 
 .checkmark {
